bk_ida/gccida/c1/check_format_info_recurse
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:1846:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *info, 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:1852:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *v9; // r13 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:1854:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:1864:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:1868:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:1969:20: error: expected expression
v22 = ( tree_node *)low; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/c-format.c:1969:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)low; 
        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_recurse/src/obj/c-format.o] Error 1
